[gd_scene load_steps=6 format=2]

[ext_resource path="res://static/collider_player.png" type="Texture" id=1]
[ext_resource path="res://src/player/Player.gd" type="Script" id=2]

[sub_resource type="Curve" id=3]
max_value = 180.0
_data = [ Vector2( 0, 0 ), 0.0, 254.088, 0, 1, Vector2( 0.367089, 93.2727 ), 254.088, 144.785, 1, 1, Vector2( 0.683544, 139.091 ), 144.785, 129.273, 1, 1, Vector2( 1, 180 ), 129.273, 0.0, 1, 0 ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 5.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.5, 5.5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )
combo_ease = SubResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
current = true
process_mode = 0
limit_left = 160
limit_top = -90
limit_right = 0
limit_bottom = 0
smoothing_speed = 10.0
drag_margin_left = 0.4
drag_margin_top = 1.0
drag_margin_right = 0.4
drag_margin_bottom = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -5.5 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5.5 )
shape = SubResource( 1 )

[node name="VariableJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ForceMoveXTimer" type="Timer" parent="."]
wait_time = 0.16
one_shot = true

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -25.0
margin_right = 20.0
margin_bottom = -11.0
align = 1
valign = 1

[node name="RoomDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="Collider" type="CollisionShape2D" parent="RoomDetector"]
position = Vector2( 0, -5.5 )
shape = SubResource( 2 )

[node name="ComboResetTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 0, -5.5 )
width = 1.0
default_color = Color( 0.4, 0.501961, 1, 1 )

[connection signal="area_entered" from="RoomDetector" to="." method="_on_RoomDetector_area_entered"]
[connection signal="timeout" from="ComboResetTimer" to="." method="_on_ComboResetTimer_timeout"]
